modified config for drives

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,9 @@
-:CPU_maximum_percentage: 70
-:CPU_minimum_percentage: 40
-:C_drive: yes
-:D_drive: yes
-:E_drive: yes
-:Memory_maximum_percentage: 80
-:Memory_minimum_percentage: 50
+config:
+
+  CPU_maximum_percentage: 70
+  CPU_minimum_percentage: 40
+  C: yes
+  D: no
+  E: yes
+  Memory_maximum_percentage: 80
+  Memory_minimum_percentage: 50
